# ysos_platform_as81_jni

./: README.md  settings.gradle
app/src/main/cpp/: CMakeLists--exe.txt  CMakeLists--lib.txt  CMakeLists.txt  native-lib.cpp
app/src/main/cpp/core/trunk/main/: CMakeLists.txt
app/src/main/cpp/core/trunk/main/framework/: CMakeLists.txt
app/src/main/cpp/core/trunk/main/framework/core_help_package/: CMakeLists.txt
app/src/main/cpp/core/trunk/main/framework/coreframework/: CMakeLists.txt
app/src/main/cpp/core/trunk/main/framework/os_hal_package/: CMakeLists.txt
app/src/main/cpp/core/trunk/main/framework/protocol_help_package/: CMakeLists.txt  CMakeLists.txt.0
app/src/main/cpp/core/trunk/main/framework/socket_help_package/: CMakeLists.txt  CMakeLists.txt.0
app/src/main/cpp/core/trunk/main/framework/sys_daemon_package/: CMakeLists.txt
app/src/main/cpp/core/trunk/main/framework/sys_framework_package/: CMakeLists.txt  CMakeLists.txt.0
app/src/main/cpp/core/trunk/main/framework/sys_interface_package/: CMakeLists.txt.0
app/src/main/cpp/core/trunk/main/framework/sys_platform_sdk/: CMakeLists.txt
app/src/main/cpp/core/trunk/main/framework/test/: CMakeLists.txt
app/src/main/cpp/core/trunk/main/framework/ysos/: CMakeLists.txt  CMakeLists_lib.txt
app/src/main/cpp/core/trunk/main/framework/ysos_daemon/: CMakeLists.txt
app/src/main/cpp/core/trunk/main/framework/ysoslog/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/ArtificialAuxiliaryCallback/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/audio/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/chassis/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/commontransitioncallback/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/configinformationcallback/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/doconfigcallback/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/getdatacallback/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/hardware/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/mqttcallback/: CMakeLists.txt  CMakeLists.txt.0
app/src/main/cpp/plugins/trunk/main/callbacks/nlpextcallback/: CMakeLists.txt  CMakeLists.txt.0
app/src/main/cpp/plugins/trunk/main/callbacks/nlprepeatercallback/: CMakeLists.txt  CMakeLists.txt.0
app/src/main/cpp/plugins/trunk/main/callbacks/powermanagercallback/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/resolutioncallback/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/signincallback/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/strategycallback/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/templatecallback/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/timetriggercallback/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/callbacks/video/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/commons/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/commons/httpclient/: CMakeLists.txt  CMakeLists.txt.0
app/src/main/cpp/plugins/trunk/main/commons/ysoslog/: CMakeLists.txt.0
app/src/main/cpp/plugins/trunk/main/connection/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/connection/httpclientconnection/: CMakeLists.txt  CMakeLists.txt.0
app/src/main/cpp/plugins/trunk/main/connection/httptransportconnection/: CMakeLists.txt  CMakeLists.txt.0
app/src/main/cpp/plugins/trunk/main/connection/sftptransportconnection/: CMakeLists.txt  CMakeLists.txt.0
app/src/main/cpp/plugins/trunk/main/drivers/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/drivers/ArtificialAuxiliaryDriver/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/drivers/audio/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/drivers/chassis/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/drivers/configinformationdriver/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/drivers/doconfigdriver/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/drivers/nlp/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/drivers/powermanagerdriver/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/drivers/resolutiondriver/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/drivers/video/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/modules/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/modules/ArtificialAuxiliaryModule/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/modules/audio/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/modules/chassis/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/modules/configinformationmodule/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/modules/doconfigmodule/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/modules/hardware/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/modules/mqttmodule/: CMakeLists.txt  CMakeLists.txt.0
app/src/main/cpp/plugins/trunk/main/modules/nlpextmodule/: CMakeLists.txt  CMakeLists.txt.0
app/src/main/cpp/plugins/trunk/main/modules/powermanagermodule/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/modules/resolutionmodule/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/modules/setdatamodule/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/modules/signinmodule/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/modules/templatemodule/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/modules/timetriggermodule/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/modules/video/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/protocols/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/protocols/convertprotocol/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/protocols/ioctltextprotocol/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/protocols/readkeyprotocol/: CMakeLists.txt
app/src/main/cpp/plugins/trunk/main/tests/: CMakeLists.txt
(+581 files in other folders)
