####Make最低版本号要求##
##cmake_minimum_required(VERSION 2.8)
####project info##
##project(framework)

##add 目录下的所有源文件##
#add_subdirectory(ysoslog)
#add_subdirectory(core_help_package)
#add_subdirectory(os_hal_package)
#add_subdirectory(protocol_help_package)
#add_subdirectory(sys_framework_package)
#add_subdirectory(sys_platform_sdk)

##deamon_package cpp src
##add_subdirectory(sys_daemon_package)
##daemon##
##add_subdirectory(ysos_daemon)

#add main cpp
##add_subdirectory(coreframework)
##add_subdirectory(ysos)

##add_subdirectory(ysos_daemon)


#add_subdirectory(socket_help_package)
add_subdirectory(test)