#add callbacks cpp src --lib ##
add_subdirectory(commontransitioncallback)
add_subdirectory(getdatacallback)
add_subdirectory(strategycallback)

####first check moudle callback
add_subdirectory(templatecallback)
add_subdirectory(nlpextcallback)
add_subdirectory(nlprepeatercallback)

#add_subdirectory(signincallback)

#add_subdirectory(video)
#add_subdirectory(audio)
#add_subdirectory(chassis)
## PM ##
#add_subdirectory(powermanagercallback)
#add_subdirectory(hardware)
####add_subdirectory(doconfigcallback)
####add_subdirectory(configinformationcallback)
####add_subdirectory(resolutioncallback)

#add_subdirectory(mqttcallback)

#add_subdirectory(timetriggercallback)

#add_subdirectory(ArtificialAuxiliaryCallback)