##add drivers cpp src --lib ##

##add_subdirectory(doconfigdriver)
##add_subdirectory(configinformationdriver)
##add_subdirectory(resolutiondriver)

add_subdirectory(nlp)

#add_subdirectory(video)
#add_subdirectory(audio)
#add_subdirectory(chassis)

#add_subdirectory(powermanagerdriver)

#add_subdirectory(ArtificialAuxiliaryDriver)