#add modules cpp src --lib ##
add_subdirectory(setdatamodule)
#add_subdirectory(signinmodule)
add_subdirectory(templatemodule)
add_subdirectory(nlpextmodule)

#add_subdirectory(video)
#add_subdirectory(audio)
#add_subdirectory(chassis)
#add_subdirectory(powermanagermodule)
#add_subdirectory(hardware)

#add_subdirectory(mqttmodule)

#add_subdirectory(timetriggermodule)

#add_subdirectory(ArtificialAuxiliaryModule)

##add_subdirectory(doconfigmodule)
##add_subdirectory(configinformationmodule)
##add_subdirectory(resolutionmodule)