add_subdirectory(commonstrategycallback)
add_subdirectory(ioctlstrategycallback)
add_subdirectory(templatestrategycallback)

#add_subdirectory(audiostrategycallback)
#add_subdirectory(literobotcapacitystrategycallback)

#add_subdirectory(customerdetstrategycallback)
#add_subdirectory(facestrategycallback)
#add_subdirectory(managerselfstrategycallback)

#add_subdirectory(movepointstrategycallback)

#add_subdirectory(autoselfstrategycallback)